--- a/View/ShopListView.xaml
+++ b/View/ShopListView.xaml
@@ -8,7 +8,7 @@
         xmlns:local="clr-namespace:PCClubApp.View" xmlns:local1="clr-namespace:PCClubApp"
 
       d:DesignHeight="450" d:DesignWidth="800">
-    <GridView x:Name="Products">
+    <GridView x:Name="Products" SelectionMode="None">
         <GridView.ItemTemplate>
             <DataTemplate>
                 <Grid Width="250" Height="400">
