--- a/View/ReserveInfo.xaml
+++ b/View/ReserveInfo.xaml
@@ -11,20 +11,22 @@
 
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="92,82,0,0" Text="Новая бронь" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="#FFDAF0F5" FocusVisualPrimaryBrush="{x:Null}" FontSize="18"/>
-        <CalendarDatePicker Margin="91,144,0,0" VerticalAlignment="Top" Background="#CC232836" BorderBrush="{x:Null}" Foreground="#FF98A2A5" Width="231" Height="38" PlaceholderText="дд.мм.гг 00:00"/>
-        <CalendarDatePicker Margin="348,144,0,0" VerticalAlignment="Top" Background="#CC232836" BorderBrush="{x:Null}" Foreground="#FF98A2A5" Width="231" Height="38" PlaceholderText="дд.мм.гг 00:00"/>
+        <CalendarDatePicker Margin="91,144,0,0" VerticalAlignment="Top" Background="#CC232836" BorderBrush="{x:Null}" Foreground="#FF98A2A5" Width="251" Height="38" PlaceholderText="дд.мм.гг"/>
+        <CalendarDatePicker Margin="386,144,0,0" VerticalAlignment="Top" Background="#CC232836" BorderBrush="{x:Null}" Foreground="#FF98A2A5" Width="242" Height="38" PlaceholderText="дд.мм.гг"/>
         <TextBlock HorizontalAlignment="Left" Margin="92,120,0,0" Text="Дата и время начала" TextWrapping="Wrap" VerticalAlignment="Top" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
-        <TextBlock HorizontalAlignment="Left" Margin="348,120,0,0" Text="Дата и время конца" TextWrapping="Wrap" VerticalAlignment="Top" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
-        <TextBlock HorizontalAlignment="Left" Margin="92,210,0,0" Text="Номер ПК" TextWrapping="Wrap" VerticalAlignment="Top" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
-        <ComboBox Margin="92,234,0,0" Width="230" Height="38" Background="#CC232836" BorderBrush="{x:Null}" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5">
+        <TextBlock HorizontalAlignment="Left" Margin="386,120,0,0" Text="Дата и время конца" TextWrapping="Wrap" VerticalAlignment="Top" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
+        <TextBlock HorizontalAlignment="Left" Margin="93,244,0,0" Text="Номер ПК" TextWrapping="Wrap" VerticalAlignment="Top" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5"/>
+        <ComboBox Margin="93,268,0,0" Width="230" Height="38" Background="#CC232836" BorderBrush="{x:Null}" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}" Foreground="#FF98A2A5">
             <TextBlock>001</TextBlock>
             <TextBlock>002</TextBlock>
             <TextBlock>003</TextBlock>
             <TextBlock>004</TextBlock>
             <TextBlock>005</TextBlock>
         </ComboBox>
-        <Button Content="Отмена" Margin="98,320,0,0" VerticalAlignment="Top" Foreground="#FFDAF0F5" Background="{x:Null}" BorderBrush="{x:Null}" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}"/>
-        <Button Content="Забронировать" Margin="194,318,0,0" VerticalAlignment="Top" Width="218" Height="40" Foreground="#FFDAF0F5" Background="#FF2F74B0"/>
+        <Button Content="Отмена" Margin="100,334,0,0" VerticalAlignment="Top" Foreground="#FFDAF0F5" Background="{x:Null}" BorderBrush="{x:Null}" FocusVisualPrimaryBrush="{x:Null}" FocusVisualSecondaryBrush="{x:Null}"/>
+        <Button Content="Забронировать" Margin="196,332,0,0" VerticalAlignment="Top" Width="218" Height="40" Foreground="#FFDAF0F5" Background="#FF2F74B0"/>
+        <TimePicker Margin="92,187,0,0" VerticalAlignment="Top" Width="250"/>
+        <TimePicker Margin="386,187,0,0" VerticalAlignment="Top" Width="242"/>
 
     </Grid>
 </UserControl>
