--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -33,12 +33,14 @@
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                             <GradientStop Color="#FFDAF0F5" Offset="1"/>
                             <GradientStop Color="#FF2F74B0" Offset="0"/>
-                            <GradientStop Color="#FFD6F2F3" Offset="1"/>
+                            <GradientStop Color="#FF577FEA" Offset="1"/>
                         </LinearGradientBrush>
                     </Button.Background>
 
                 </Button>
-
+                <Button HorizontalAlignment="Center" Margin="0,270,0,0" Content="У меня чек" Background="{x:Null}" Foreground="#FF577FEA" >
+                    
+                </Button>
                 <TextBox Name="LoginTextBox" HorizontalAlignment="Center" Margin="0,250,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="319" Height="35" Background="{x:Null}" BorderBrush="#FF3F465F" Foreground="#FFDAF0F5" FontSize="18" TextAlignment="Left" Padding="8,4,0,0" UseLayoutRounding="True" PlaceholderText="Login"/>
                 <TextBox Name="passwordTextBox" HorizontalAlignment="Center" Margin="0,300,0,0" VerticalAlignment="Top" Width="319" Height="35" Background="{x:Null}" BorderBrush="#FF3F465F" Padding="8,4,0,0" Foreground="#FFDAF0F5" FontSize="18" Text="" PlaceholderText="Password"/>
 
