--- a/View/ShopListView.xaml
+++ b/View/ShopListView.xaml
@@ -22,7 +22,9 @@
                         <ColumnDefinition Width="250"/>
                         <ColumnDefinition Width="250"/>
                     </Grid.ColumnDefinitions>
-                    <Image Source="/Assets/LockScreenLogo.scale-200.png" Width="250" Height="200" HorizontalAlignment="Center" VerticalAlignment="Top" />
+                    <Image Source="{Binding Image}"  Width="250" Height="200" HorizontalAlignment="Center" VerticalAlignment="Top" >
+                        
+                    </Image>
                     <TextBlock Text="{Binding Name}" Margin="16,230,0,0" Foreground="#FFDAF0F5" FocusVisualPrimaryBrush="#FFDAF0F5" FontSize="13" />
                     <TextBlock Text="{Binding CostValue}" Margin="0,225,16,0" HorizontalAlignment="Right" FocusVisualPrimaryBrush="#FFDAF0F5" Foreground="#FFDAF0F5" FontSize="20"/>
                     <TextBlock Text="{Binding Description}" Margin="16,260,16,72" TextWrapping="Wrap" FontSize="9" FocusVisualPrimaryBrush="#FFDAF0F5" Foreground="#FFDAF0F5"  />
